--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .link {
+        @apply cursor-pointer hover:underline;
+    }
+    .button {
+        @apply p-2 text-xs md:text-sm bg-gradient-to-b from-red-400 to-red-600 border border-black rounded-sm focus:outline-none focus:ring-2 focus:ring-red-300 active:bg-red-500;
+    }
+}
